--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "daisyui": "^2.15.4",
     "next": "12.1.6",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "swiper": "^8.2.6"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.7",
