--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/react-fontawesome": "^0.1.18",
     "axios": "^0.27.2",
     "daisyui": "^2.15.4",
+    "embla-carousel-react": "^7.0.0-rc01",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
